Added button to remove cache file

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -3,6 +3,7 @@ btn.clear  = Clar
 btn.enter  = Introdu\u00EFu
 btn.filter = Aplicar el filtre de dates
 btn.group  = Grup
+btn.remove = Remove
 btn.rol    = Rol
 btn.type   = Escriviu
 
@@ -53,12 +54,13 @@ header.passwordDateTime       = Contrasenya de data anterior:
 html.btnBoxPlot        = Diagramacaja
 html.btnBoxPlotGroup   = Boxplot de Grups
 html.btnCalificaciones = Qualificaci\u00F3
-html.btnCumLine        = Accumulated Lines
+html.btnCumLine        = Accumulated
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
 html.btnLegend         = Llegenda
 html.btnLine           = L\u00EDnies
 html.btnMean           = General Stats
+html.btnMeanDiff       = Relative Cum.
 html.btnRadar          = Radar
 html.btnStackedBar     = Barres Apilades
 html.btnViolin         = Violin
@@ -596,6 +598,8 @@ tab.section      = Secci\u00F3
 
 text.all                = Tots
 text.betweendates       = Between {0} and {1} 
+text.confirmation       = Confirmation
+text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Dies
 text.favorite           = Destacats
 text.future             = Future
