--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -3,6 +3,7 @@ btn.clear  = klar
 btn.enter  = Eingeben
 btn.filter = Datumsfilter anwenden
 btn.group  = Gruppe
+btn.remove = Remove
 btn.rol    = Rol
 btn.type   = Art
 
@@ -53,12 +54,13 @@ header.passwordDateTime       = Passwort f\u00FCr das vorherige Datum:
 html.btnBoxPlot        = BoxPlot
 html.btnBoxPlotGroup   = Gruppen-Boxplot
 html.btnCalificaciones = Qualifikation
-html.btnCumLine        = Accumulated Lines
+html.btnCumLine        = Accumulated
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
 html.btnLegend         = Legende
 html.btnLine           = Linien
 html.btnMean           = General Stats
+html.btnMeanDiff       = Relative Cum.
 html.btnRadar          = Radar
 html.btnStackedBar     = Stacked Bar
 html.btnViolin         = Violin
@@ -596,6 +598,8 @@ tab.section      = Abschnitt
 
 text.all                = Alles
 text.betweendates       = Between {0} and {1}
+text.confirmation       = Confirmation
+text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Tage
 text.favorite           = Als Favorit markiert
 text.future             = Future
