--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -3,6 +3,7 @@ btn.clear  = Clear
 btn.enter  = Enter
 btn.filter = Apply dates filter
 btn.group  = Group
+btn.remove = Remove
 btn.rol    = Rol
 btn.type   = Type
 
@@ -53,12 +54,13 @@ header.passwordDateTime       = Previous date password:
 html.btnBoxPlot        = Boxplot
 html.btnBoxPlotGroup   = Group BoxPlot
 html.btnCalificaciones = Qualification
-html.btnCumLine        = Accumulated Lines
+html.btnCumLine        = Accumulated
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
 html.btnLegend         = Legend
 html.btnLine           = Lines
 html.btnMean           = General Stats
+html.btnMeanDiff       = Relative Cum.
 html.btnRadar          = Radar
 html.btnStackedBar     = Stacked Bar
 html.btnViolin         = Violin
@@ -596,6 +598,8 @@ tab.section      = Sections
 
 text.all                = All
 text.betweendates       = Between {0} and {1}
+text.confirmation       = Confirmation
+text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Days
 text.favorite           = Starred
 text.future             = Future
