--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -3,6 +3,7 @@ btn.clear  = Borrar
 btn.enter  = Entrar
 btn.filter = Aplicar filtro de fechas
 btn.group  = Grupo
+btn.remove = Borrar
 btn.rol    = Rol
 btn.type   = Tipo
 
@@ -53,12 +54,13 @@ header.passwordDateTime       = Fecha de la contrase\u00F1a antigua:
 html.btnBoxPlot        = Boxplot
 html.btnBoxPlotGroup   = BoxPlot de Grupos
 html.btnCalificaciones = Calificaciones
-html.btnCumLine        = L\u00EDneas Acumuladas
+html.btnCumLine        = Acumulados
 html.btnGroupMean      = Estad\u00EDsticas de grupo(s)
 html.btnHeatmap        = Heatmap
 html.btnLegend         = Leyenda
 html.btnLine           = L\u00EDneas
 html.btnMean           = Estad\u00EDsticas generales
+html.btnMeanDiff       = Acum. Relativos
 html.btnRadar          = Radar
 html.btnStackedBar     = Barras Apiladas
 html.btnViolin         = Violin
@@ -596,6 +598,8 @@ tab.section      = Secci\u00F3n
 
 text.all                = Todos
 text.betweendates       = Entre {0} y {1} d\u00EDas
+text.confirmation       = Confirmaci\u00F3n
+text.confirmationtext   = \u00BFEstas seguro de borrar la cach\u00E9 del curso seleccionado?
 text.days               = d\u00EDas
 text.favorite           = Destacados
 text.future             = Futuros
