--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -3,6 +3,7 @@ btn.clear  = Clair
 btn.enter  = Entrer
 btn.filter = Apply dates filter
 btn.group  = Groupe
+btn.remove = Remove
 btn.rol    = Rol
 btn.type   = Type
 
@@ -53,12 +54,13 @@ header.passwordDateTime       = Date pr\u00E9c\u00E9dente mot de passe:
 html.btnBoxPlot        = Boxplot
 html.btnBoxPlotGroup   = Boxplot de Groupe
 html.btnCalificaciones = Qualification
-html.btnCumLine        = Accumulated Lines
+html.btnCumLine        = Accumulated
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
 html.btnLegend         = L\u00E9gende
 html.btnLine           = Lignes
 html.btnMean           = General Stats
+html.btnMeanDiff       = Relative Cum.
 html.btnRadar          = Radar
 html.btnStackedBar     = Bar Empil\u00E9e
 html.btnViolin         = Violin
@@ -596,6 +598,8 @@ tab.section      = Section
 
 text.all                = Tout
 text.betweendates       = Between {0} and {1}
+text.confirmation       = Confirmation
+text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Journ\u00E9es
 text.favorite           = Favoris\r\n
 text.future             = Future
