--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -3,6 +3,7 @@ btn.clear  = Chiaro
 btn.enter  = accedere
 btn.filter = Applica il filtro delle date
 btn.group  = Gruppo
+btn.remove = Remove
 btn.rol    = Rol
 btn.type   = genere
 
@@ -53,12 +54,13 @@ header.passwordDateTime       = Data precedente password:
 html.btnBoxPlot        = Boxplot
 html.btnBoxPlotGroup   = Diagramma di Gruppo
 html.btnCalificaciones = Qualificazione
-html.btnCumLine        = Accumulated Lines
+html.btnCumLine        = Accumulated
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
 html.btnLegend         = Leggenda
 html.btnLine           = Linee
 html.btnMean           = General Stats
+html.btnMeanDiff       = Relative Cum.
 html.btnRadar          = Radar
 html.btnStackedBar     = A Barre In Pila
 html.btnViolin         = Violin
@@ -596,6 +598,8 @@ tab.section      = Sezione
 
 text.all                = Tutti
 text.betweendates       = Between {0} and {1}
+text.confirmation       = Confirmation
+text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = giorni
 text.favorite           = Preferiti
 text.future             = Future
