--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -3,6 +3,7 @@ btn.clear  = Claro
 btn.enter  = Entrar
 btn.filter = Aplicar filtro de datas
 btn.group  = Grupo
+btn.remove = Remove
 btn.rol    = Rol
 btn.type   = Tipo
 
@@ -53,12 +54,13 @@ header.passwordDateTime       = Senha da data anterior:
 html.btnBoxPlot        = Boxplot
 html.btnBoxPlotGroup   = Boxplot do Grupo
 html.btnCalificaciones = Qualifica\u00E7\u00E3o
-html.btnCumLine        = Accumulated Lines
+html.btnCumLine        = Accumulated
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
 html.btnLegend         = Lenda
 html.btnLine           = Lines
 html.btnMean           = General Stats
+html.btnMeanDiff       = Relative Cum.
 html.btnRadar          = Radar
 html.btnStackedBar     = Bar Empilhados
 html.btnViolin         = Violin
@@ -596,6 +598,8 @@ tab.section      = Se\u00E7\u00E3o
 
 text.all                = Todos
 text.betweendates       = Between {0} and {1}
+text.confirmation       = Confirmation
+text.confirmationtext   = Are you sure to remove the cache of the selected course?
 text.days               = Dias
 text.favorite           = Com estrela
 text.future             = Future
