Added icon and change translate for remove button

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -3,7 +3,7 @@ btn.clear  = Clar
 btn.enter  = Introdu\u00EFu
 btn.filter = Aplicar el filtre de dates
 btn.group  = Grup
-btn.remove = Remove
+btn.remove = Netejar
 btn.rol    = Rol
 btn.type   = Escriviu
 
