--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -3,7 +3,7 @@ btn.clear  = klar
 btn.enter  = Eingeben
 btn.filter = Datumsfilter anwenden
 btn.group  = Gruppe
-btn.remove = Remove
+btn.remove = Aufr\u00E4umen
 btn.rol    = Rol
 btn.type   = Art
 
