--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -3,7 +3,7 @@ btn.clear  = Clear
 btn.enter  = Enter
 btn.filter = Apply dates filter
 btn.group  = Group
-btn.remove = Remove
+btn.remove = Clean
 btn.rol    = Rol
 btn.type   = Type
 
