--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -3,7 +3,7 @@ btn.clear  = Borrar
 btn.enter  = Entrar
 btn.filter = Aplicar filtro de fechas
 btn.group  = Grupo
-btn.remove = Borrar
+btn.remove = Limpiar
 btn.rol    = Rol
 btn.type   = Tipo
 
