--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -3,7 +3,7 @@ btn.clear  = Clair
 btn.enter  = Entrer
 btn.filter = Apply dates filter
 btn.group  = Groupe
-btn.remove = Remove
+btn.remove = Nettoyer
 btn.rol    = Rol
 btn.type   = Type
 
