--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -3,7 +3,7 @@ btn.clear  = Chiaro
 btn.enter  = accedere
 btn.filter = Applica il filtro delle date
 btn.group  = Gruppo
-btn.remove = Remove
+btn.remove = Ripulire
 btn.rol    = Rol
 btn.type   = genere
 
