--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -3,7 +3,7 @@ btn.clear  = Claro
 btn.enter  = Entrar
 btn.filter = Aplicar filtro de datas
 btn.group  = Grupo
-btn.remove = Remove
+btn.remove = Limpar
 btn.rol    = Rol
 btn.type   = Tipo
 
