--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -53,7 +53,7 @@ header.passwordDateTime       = Passwort f\u00FCr das vorherige Datum:
 
 html.btnBoxPlot        = BoxPlot
 html.btnBoxPlotGroup   = Gruppen-Boxplot
-html.btnCalificaciones = Qualifikation
+html.btnCalificaciones = Noten
 html.btnCumLine        = Accumulated
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
