--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -53,7 +53,7 @@ header.passwordDateTime       = Previous date password:
 
 html.btnBoxPlot        = Boxplot
 html.btnBoxPlotGroup   = Group BoxPlot
-html.btnCalificaciones = Qualification
+html.btnCalificaciones = Grades
 html.btnCumLine        = Accumulated
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
