--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -53,7 +53,7 @@ header.passwordDateTime       = Date pr\u00E9c\u00E9dente mot de passe:
 
 html.btnBoxPlot        = Boxplot
 html.btnBoxPlotGroup   = Boxplot de Groupe
-html.btnCalificaciones = Qualification
+html.btnCalificaciones = Grades
 html.btnCumLine        = Accumulated
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
