--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -53,7 +53,7 @@ header.passwordDateTime       = Data precedente password:
 
 html.btnBoxPlot        = Boxplot
 html.btnBoxPlotGroup   = Diagramma di Gruppo
-html.btnCalificaciones = Qualificazione
+html.btnCalificaciones = Gradi
 html.btnCumLine        = Accumulated
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
