--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -53,7 +53,7 @@ header.passwordDateTime       = Senha da data anterior:
 
 html.btnBoxPlot        = Boxplot
 html.btnBoxPlotGroup   = Boxplot do Grupo
-html.btnCalificaciones = Qualifica\u00E7\u00E3o
+html.btnCalificaciones = Notas
 html.btnCumLine        = Accumulated
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
