--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -53,7 +53,7 @@ header.passwordDateTime       = Contrasenya de data anterior:
 
 html.btnBoxPlot        = Diagramacaja
 html.btnBoxPlotGroup   = Boxplot de Grups
-html.btnCalificaciones = Qualificaci\u00F3
+html.btnCalificaciones = Graus
 html.btnCumLine        = Accumulated
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
