Added activity completion table

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -16,6 +16,7 @@ chartlabel.groupMean      = Grup de mitjana
 chartlabel.lowerlimit     = L\u00EDmit inferior
 chartlabel.median         = Mediana
 chartlabel.name           = Nom
+chartlabel.progress       = Progress
 chartlabel.tableGroupMean = Grup mitj\u00E0
 chartlabel.tableMean      = Significar
 chartlabel.thirdquartile  = Tercer quartil
@@ -54,7 +55,7 @@ header.passwordDateTime       = Contrasenya de data anterior:
 html.btnBoxPlot        = Diagramacaja
 html.btnBoxPlotGroup   = Boxplot de Grups
 html.btnCalificaciones = Graus
-html.btnCumLine        = Accumulated
+html.btnCumLine        = Cumulative Log
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
 html.btnLegend         = Llegenda
