--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -16,6 +16,7 @@ chartlabel.groupMean      = Gruppenmittelwert
 chartlabel.lowerlimit     = Untere Grenze
 chartlabel.median         = Median
 chartlabel.name           = Name
+chartlabel.progress       = Progress
 chartlabel.tableGroupMean = Mittlere Gruppe
 chartlabel.tableMean      = Bedeuten
 chartlabel.thirdquartile  = Drittes Quartil
@@ -54,7 +55,7 @@ header.passwordDateTime       = Passwort f\u00FCr das vorherige Datum:
 html.btnBoxPlot        = BoxPlot
 html.btnBoxPlotGroup   = Gruppen-Boxplot
 html.btnCalificaciones = Noten
-html.btnCumLine        = Accumulated
+html.btnCumLine        = Cumulative Log
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
 html.btnLegend         = Legende
