--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -16,6 +16,7 @@ chartlabel.groupMean      = Group Mean
 chartlabel.lowerlimit     = Lower Limit
 chartlabel.median         = Median
 chartlabel.name           = Name
+chartlabel.progress       = Progress
 chartlabel.tableGroupMean = Mean Group
 chartlabel.tableMean      = Mean
 chartlabel.thirdquartile  = Third Quartile
@@ -54,7 +55,7 @@ header.passwordDateTime       = Previous date password:
 html.btnBoxPlot        = Boxplot
 html.btnBoxPlotGroup   = Group BoxPlot
 html.btnCalificaciones = Grades
-html.btnCumLine        = Accumulated
+html.btnCumLine        = Cumulative Log
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
 html.btnLegend         = Legend
