--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -16,6 +16,7 @@ chartlabel.groupMean      = Media Del Grupo
 chartlabel.lowerlimit     = Limite Inferior
 chartlabel.median         = Mediana
 chartlabel.name           = Nombre
+chartlabel.progress       = Progresi\u00F3n
 chartlabel.tableGroupMean = Media Grupo
 chartlabel.tableMean      = Media
 chartlabel.thirdquartile  = Tercer Cuartil
