--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -16,6 +16,7 @@ chartlabel.groupMean      = Moyenne du groupe
 chartlabel.lowerlimit     = Limite inf\u00E9rieure
 chartlabel.median         = M\u00E9dian
 chartlabel.name           = pr\u00E9nom
+chartlabel.progress       = Progress
 chartlabel.tableGroupMean = Groupe moyen
 chartlabel.tableMean      = Signifier
 chartlabel.thirdquartile  = Troisi\u00E8me quartile
@@ -54,7 +55,7 @@ header.passwordDateTime       = Date pr\u00E9c\u00E9dente mot de passe:
 html.btnBoxPlot        = Boxplot
 html.btnBoxPlotGroup   = Boxplot de Groupe
 html.btnCalificaciones = Grades
-html.btnCumLine        = Accumulated
+html.btnCumLine        = Cumulative Log
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
 html.btnLegend         = L\u00E9gende
