--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -16,6 +16,7 @@ chartlabel.groupMean      = Media di gruppo
 chartlabel.lowerlimit     = Limite inferiore
 chartlabel.median         = Mediano
 chartlabel.name           = Nome
+chartlabel.progress       = Progress
 chartlabel.tableGroupMean = Gruppo medio
 chartlabel.tableMean      = Significare
 chartlabel.thirdquartile  = Terzo quartile
@@ -54,7 +55,7 @@ header.passwordDateTime       = Data precedente password:
 html.btnBoxPlot        = Boxplot
 html.btnBoxPlotGroup   = Diagramma di Gruppo
 html.btnCalificaciones = Gradi
-html.btnCumLine        = Accumulated
+html.btnCumLine        = Cumulative Log
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
 html.btnLegend         = Leggenda
