--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -16,6 +16,7 @@ chartlabel.groupMean      = M\u00E9dia do grupo
 chartlabel.lowerlimit     = Limite inferior
 chartlabel.median         = Mediana
 chartlabel.name           = Nome
+chartlabel.progress       = Progress
 chartlabel.tableGroupMean = Grupo M\u00E9dio
 chartlabel.tableMean      = Significar
 chartlabel.thirdquartile  = Terceiro quartil
@@ -54,7 +55,7 @@ header.passwordDateTime       = Senha da data anterior:
 html.btnBoxPlot        = Boxplot
 html.btnBoxPlotGroup   = Boxplot do Grupo
 html.btnCalificaciones = Notas
-html.btnCumLine        = Accumulated
+html.btnCumLine        = Cumulative Log
 html.btnGroupMean      = Group(s) Stats
 html.btnHeatmap        = Heatmap
 html.btnLegend         = Lenda
