ACtivity table completed

--- a/resources/messages/Messages_ca.properties
+++ b/resources/messages/Messages_ca.properties
@@ -52,20 +52,21 @@ error.userdata        = Error en recuperar les dades de l'usuari.
 header.passwordChangedMessage = S'ha detectat la contrasenya
 header.passwordDateTime       = Contrasenya de data anterior:
 
-html.btnBoxPlot        = Diagramacaja
-html.btnBoxPlotGroup   = Boxplot de Grups
-html.btnCalificaciones = Graus
-html.btnCumLine        = Cumulative Log
-html.btnGroupMean      = Group(s) Stats
-html.btnHeatmap        = Heatmap
-html.btnLegend         = Llegenda
-html.btnLine           = L\u00EDnies
-html.btnMean           = General Stats
-html.btnMeanDiff       = Relative Cum.
-html.btnRadar          = Radar
-html.btnStackedBar     = Barres Apilades
-html.btnViolin         = Violin
-html.btnViolinGroup    = Violin Groups
+html.btnActivitiesTable = Compleci\u00F3 de l'activitat
+html.btnBoxPlot         = Diagramacaja
+html.btnBoxPlotGroup    = Boxplot de Grups
+html.btnCalificaciones  = Graus
+html.btnCumLine         = Cumulative Log
+html.btnGroupMean       = Group(s) Stats
+html.btnHeatmap         = Heatmap
+html.btnLegend          = Llegenda
+html.btnLine            = L\u00EDnies
+html.btnMean            = General Stats
+html.btnMeanDiff        = Relative Cum.
+html.btnRadar           = Radar
+html.btnStackedBar      = Barres Apilades
+html.btnViolin          = Violin
+html.btnViolinGroup     = Violin Groups
 
 label.activity         = \u00DAltima connexi\u00F3:
 label.categoryitem     = Categoria / article:
@@ -100,6 +101,7 @@ label.type             = Tipus:
 label.updatinglog      = S'est\u00E0 actualitzant el registre ...
 label.user             = Usuari:
 label.welcome          = Benvinguda
+label.withcompletion   = Completed Act.
 label.withhidden       = Amb ocults
 
 log.component.activity_report                                   = Informe d'activitat
