--- a/resources/messages/Messages_de.properties
+++ b/resources/messages/Messages_de.properties
@@ -52,20 +52,21 @@ error.userdata        = Fehler beim Wiederherstellen der Benutzerdaten.
 header.passwordChangedMessage = Gefunden wurde ein ge\u00E4ndertes Passwort
 header.passwordDateTime       = Passwort f\u00FCr das vorherige Datum:
 
-html.btnBoxPlot        = BoxPlot
-html.btnBoxPlotGroup   = Gruppen-Boxplot
-html.btnCalificaciones = Noten
-html.btnCumLine        = Cumulative Log
-html.btnGroupMean      = Group(s) Stats
-html.btnHeatmap        = Heatmap
-html.btnLegend         = Legende
-html.btnLine           = Linien
-html.btnMean           = General Stats
-html.btnMeanDiff       = Relative Cum.
-html.btnRadar          = Radar
-html.btnStackedBar     = Stacked Bar
-html.btnViolin         = Violin
-html.btnViolinGroup    = Violin Groups
+html.btnActivitiesTable = Aktivit\u00E4tsabschluss
+html.btnBoxPlot         = BoxPlot
+html.btnBoxPlotGroup    = Gruppen-Boxplot
+html.btnCalificaciones  = Noten
+html.btnCumLine         = Cumulative Log
+html.btnGroupMean       = Group(s) Stats
+html.btnHeatmap         = Heatmap
+html.btnLegend          = Legende
+html.btnLine            = Linien
+html.btnMean            = General Stats
+html.btnMeanDiff        = Relative Cum.
+html.btnRadar           = Radar
+html.btnStackedBar      = Stacked Bar
+html.btnViolin          = Violin
+html.btnViolinGroup     = Violin Groups
 
 label.activity         = Letzte Verbindung:
 label.categoryitem     = Kategorie / Gegenstand:
@@ -100,6 +101,7 @@ label.type             = Art:
 label.updatinglog      = Protokoll wird aktualisiert ...
 label.user             = Nutzername:
 label.welcome          = Herzlich willkommen
+label.withcompletion   = Completed Act.
 label.withhidden       = Mit verstecktem
 
 log.component.activity_report                                   = Kursaktivit\u00E4t
