--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -52,20 +52,21 @@ error.userdata        = Error when recovering user data.
 header.passwordChangedMessage = Detected was password changed
 header.passwordDateTime       = Previous date password: 
 
-html.btnBoxPlot        = Boxplot
-html.btnBoxPlotGroup   = Group BoxPlot
-html.btnCalificaciones = Grades
-html.btnCumLine        = Cumulative Log
-html.btnGroupMean      = Group(s) Stats
-html.btnHeatmap        = Heatmap
-html.btnLegend         = Legend
-html.btnLine           = Lines
-html.btnMean           = General Stats
-html.btnMeanDiff       = Relative Cum.
-html.btnRadar          = Radar
-html.btnStackedBar     = Stacked Bar
-html.btnViolin         = Violin
-html.btnViolinGroup    = Violin Groups
+html.btnActivitiesTable = Activity Completion
+html.btnBoxPlot         = Boxplot
+html.btnBoxPlotGroup    = Group BoxPlot
+html.btnCalificaciones  = Grades
+html.btnCumLine         = Cumulative Log
+html.btnGroupMean       = Group(s) Stats
+html.btnHeatmap         = Heatmap
+html.btnLegend          = Legend
+html.btnLine            = Lines
+html.btnMean            = General Stats
+html.btnMeanDiff        = Relative Cum.
+html.btnRadar           = Radar
+html.btnStackedBar      = Stacked Bar
+html.btnViolin          = Violin
+html.btnViolinGroup     = Violin Groups
 
 label.activity         = Last connection:
 label.categoryitem     = Category/Item:
@@ -100,6 +101,7 @@ label.type             = Type:
 label.updatinglog      = Updating log...
 label.user             = User:
 label.welcome          = Welcome
+label.withcompletion   = Completed Act.
 label.withhidden       = With hidden
 
 log.component.activity_report                                   = Activity report
