--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -52,20 +52,21 @@ error.userdata        = Error al recuperar los datos del usuario.
 header.passwordChangedMessage = Se ha detectado que se ha cambiado la contrase\u00F1a
 header.passwordDateTime       = Fecha de la contrase\u00F1a antigua: 
 
-html.btnBoxPlot        = Boxplot
-html.btnBoxPlotGroup   = BoxPlot de Grupos
-html.btnCalificaciones = Calificaciones
-html.btnCumLine        = Acumulados
-html.btnGroupMean      = Estad\u00EDsticas de grupo(s)
-html.btnHeatmap        = Heatmap
-html.btnLegend         = Leyenda
-html.btnLine           = L\u00EDneas
-html.btnMean           = Estad\u00EDsticas generales
-html.btnMeanDiff       = Acum. Relativos
-html.btnRadar          = Radar
-html.btnStackedBar     = Barras Apiladas
-html.btnViolin         = Violin
-html.btnViolinGroup    = Violin de Grupos
+html.btnActivitiesTable = Finalizaci\u00F3n Actividad
+html.btnBoxPlot         = Boxplot
+html.btnBoxPlotGroup    = BoxPlot de Grupos
+html.btnCalificaciones  = Calificaciones
+html.btnCumLine         = Acumulados
+html.btnGroupMean       = Estad\u00EDsticas de grupo(s)
+html.btnHeatmap         = Heatmap
+html.btnLegend          = Leyenda
+html.btnLine            = L\u00EDneas
+html.btnMean            = Estad\u00EDsticas generales
+html.btnMeanDiff        = Acum. Relativos
+html.btnRadar           = Radar
+html.btnStackedBar      = Barras Apiladas
+html.btnViolin          = Violin
+html.btnViolinGroup     = Violin de Grupos
 
 label.activity         = \u00DAltima conexi\u00F3n:
 label.categoryitem     = Categor\u00EDa/Item:
@@ -100,6 +101,7 @@ label.type             = Tipo:
 label.updatinglog      = Actualizando log...
 label.user             = Usuario:
 label.welcome          = Bienvenida/o
+label.withcompletion   = Act. Complet.
 label.withhidden       = Con ocultos
 
 log.component.activity_report                                   = Actividad del curso
