--- a/resources/messages/Messages_it.properties
+++ b/resources/messages/Messages_it.properties
@@ -52,20 +52,21 @@ error.userdata        = Errore durante il recupero dei dati dell'utente.
 header.passwordChangedMessage = Rilevato \u00E8 stata modificata la password
 header.passwordDateTime       = Data precedente password:
 
-html.btnBoxPlot        = Boxplot
-html.btnBoxPlotGroup   = Diagramma di Gruppo
-html.btnCalificaciones = Gradi
-html.btnCumLine        = Cumulative Log
-html.btnGroupMean      = Group(s) Stats
-html.btnHeatmap        = Heatmap
-html.btnLegend         = Leggenda
-html.btnLine           = Linee
-html.btnMean           = General Stats
-html.btnMeanDiff       = Relative Cum.
-html.btnRadar          = Radar
-html.btnStackedBar     = A Barre In Pila
-html.btnViolin         = Violin
-html.btnViolinGroup    = Violin Groups
+html.btnActivitiesTable = Completamento attivit\u00E0
+html.btnBoxPlot         = Boxplot
+html.btnBoxPlotGroup    = Diagramma di Gruppo
+html.btnCalificaciones  = Gradi
+html.btnCumLine         = Cumulative Log
+html.btnGroupMean       = Group(s) Stats
+html.btnHeatmap         = Heatmap
+html.btnLegend          = Leggenda
+html.btnLine            = Linee
+html.btnMean            = General Stats
+html.btnMeanDiff        = Relative Cum.
+html.btnRadar           = Radar
+html.btnStackedBar      = A Barre In Pila
+html.btnViolin          = Violin
+html.btnViolinGroup     = Violin Groups
 
 label.activity         = Ultima connessione:
 label.categoryitem     = Categoria / Articolo:
@@ -100,6 +101,7 @@ label.type             = Genere:
 label.updatinglog      = Aggiornamento del registro ...
 label.user             = Utente:
 label.welcome          = Benvenuto
+label.withcompletion   = Completed Act.
 label.withhidden       = Con nascosto
 
 log.component.activity_report                                   = Attivit\u00E0 del corso
