--- a/resources/messages/Messages_pt.properties
+++ b/resources/messages/Messages_pt.properties
@@ -52,20 +52,21 @@ error.userdata        = Erro ao recuperar dados do usu\u00E1rio.
 header.passwordChangedMessage = Detectado foi senha alterada
 header.passwordDateTime       = Senha da data anterior:
 
-html.btnBoxPlot        = Boxplot
-html.btnBoxPlotGroup   = Boxplot do Grupo
-html.btnCalificaciones = Notas
-html.btnCumLine        = Cumulative Log
-html.btnGroupMean      = Group(s) Stats
-html.btnHeatmap        = Heatmap
-html.btnLegend         = Lenda
-html.btnLine           = Lines
-html.btnMean           = General Stats
-html.btnMeanDiff       = Relative Cum.
-html.btnRadar          = Radar
-html.btnStackedBar     = Bar Empilhados
-html.btnViolin         = Violin
-html.btnViolinGroup    = Violin Groups
+html.btnActivitiesTable = Conclus\u00E3o das atividades
+html.btnBoxPlot         = Boxplot
+html.btnBoxPlotGroup    = Boxplot do Grupo
+html.btnCalificaciones  = Notas
+html.btnCumLine         = Cumulative Log
+html.btnGroupMean       = Group(s) Stats
+html.btnHeatmap         = Heatmap
+html.btnLegend          = Lenda
+html.btnLine            = Lines
+html.btnMean            = General Stats
+html.btnMeanDiff        = Relative Cum.
+html.btnRadar           = Radar
+html.btnStackedBar      = Bar Empilhados
+html.btnViolin          = Violin
+html.btnViolinGroup     = Violin Groups
 
 label.activity         = \u00DAltima conex\u00E3o:
 label.categoryitem     = Categoria / Item:
@@ -100,6 +101,7 @@ label.type             = Tipo:
 label.updatinglog      = Atualizando log ...
 label.user             = Usu\u00E1rio:
 label.welcome          = Bem vinda
+label.withcompletion   = Completed Act.
 label.withhidden       = Com oculto\r\n\r\n\r\n
 
 log.component.activity_report                                   = Relat\u00F3rio de atividades
