--- a/resources/messages/Messages_fr.properties
+++ b/resources/messages/Messages_fr.properties
@@ -52,20 +52,21 @@ error.userdata        = Erreur lors de la r\u00E9cup\u00E9ration des donn\u00E9e
 header.passwordChangedMessage = D\u00E9tect\u00E9 a \u00E9t\u00E9 chang\u00E9 le mot de passe
 header.passwordDateTime       = Date pr\u00E9c\u00E9dente mot de passe:
 
-html.btnBoxPlot        = Boxplot
-html.btnBoxPlotGroup   = Boxplot de Groupe
-html.btnCalificaciones = Grades
-html.btnCumLine        = Cumulative Log
-html.btnGroupMean      = Group(s) Stats
-html.btnHeatmap        = Heatmap
-html.btnLegend         = L\u00E9gende
-html.btnLine           = Lignes
-html.btnMean           = General Stats
-html.btnMeanDiff       = Relative Cum.
-html.btnRadar          = Radar
-html.btnStackedBar     = Bar Empil\u00E9e
-html.btnViolin         = Violin
-html.btnViolinGroup    = Violin Groups
+html.btnActivitiesTable = Ach\u00E8vement d'activit\u00E9s
+html.btnBoxPlot         = Boxplot
+html.btnBoxPlotGroup    = Boxplot de Groupe
+html.btnCalificaciones  = Grades
+html.btnCumLine         = Cumulative Log
+html.btnGroupMean       = Group(s) Stats
+html.btnHeatmap         = Heatmap
+html.btnLegend          = L\u00E9gende
+html.btnLine            = Lignes
+html.btnMean            = General Stats
+html.btnMeanDiff        = Relative Cum.
+html.btnRadar           = Radar
+html.btnStackedBar      = Bar Empil\u00E9e
+html.btnViolin          = Violin
+html.btnViolinGroup     = Violin Groups
 
 label.activity         = Derni\u00E8re connexion:
 label.categoryitem     = Cat\u00E9gorie / article:
@@ -100,6 +101,7 @@ label.type             = Type:
 label.updatinglog      = Mise \u00E0 jour du journal ...
 label.user             = Utilisateur:
 label.welcome          = Bienvenue
+label.withcompletion   = Completed Act.
 label.withhidden       = Avec cach\u00E9
 
 log.component.activity_report                                   = Activit\u00E9s du cours
